website rumah ayam juaranya sambel

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
     <section class="hero" id="Home">
       <main class="content">
         <h1>Rumah <span>Ayam </span>Juaranya <span>Sambel</span></h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quas.
+        
         </p>
         <a href="#" class="cta">Yukkk Cobain</a>
       </main>
@@ -208,6 +207,7 @@
     </div>
     <div class="credit">
       <a href="">Buka Dari Jam 08:00 - 22:00 WITA</a>
+      <a href="">jl. anggrek/samping lapangan pancasila</a>
     </div>
   </footer>
     <!-- footer end -->
